fixed z-index of open menu button

--- a/public/stylesheets/basicUser.css
+++ b/public/stylesheets/basicUser.css
@@ -11,6 +11,7 @@
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidepanel */
     z-index:150;
+    text-align: center;
 }
   
 /* The sidepanel links */
@@ -45,8 +46,8 @@
     color: white;
     padding: 10px 15px;
     border: none;
-    position: absolute;
-    z-index: 120;
+    position: fixed;
+    z-index: 100;
 }
 
 .openbtn:hover {
@@ -59,6 +60,9 @@
 
 .options {
     align-self: auto;
+    width: 200px;
+    height: 100px;
+    margin: 15px;
 }
 
 html, body {
@@ -71,5 +75,10 @@ iframe {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index:-1;
+    z-index:10;
+}
+
+p {
+    font-size: 25px;
+    margin-bottom: 5px;
 }
